--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
+    "@types/node": "^20.5.8",
     "browserslist": "^4.21.9",
     "dayjs": "^1.11.9",
     "esbuild": "^0.18.17",
