--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "npm run dev -s",
     "dev": "eleventy --serve",
+    "test": "jest",
     "build": "cross-env NODE_ENV=production eleventy"
   },
   "keywords": [],
@@ -13,12 +14,20 @@
   "description": "",
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
+    "@types/jest": "^29.5.4",
+    "@types/jsdom": "^21.1.2",
     "@types/node": "^20.5.8",
     "browserslist": "^4.21.9",
+    "canvas": "^2.11.2",
     "dayjs": "^1.11.9",
     "esbuild": "^0.18.17",
     "html-minifier-terser": "^7.2.0",
+    "jest": "^29.6.4",
+    "jest-environment-jsdom": "^29.6.4",
+    "jsdom": "^22.1.0",
     "lightningcss": "^1.21.5",
-    "linkedom": "^0.15.1"
+    "linkedom": "^0.15.1",
+    "ts-jest": "^29.1.1",
+    "tsx": "^3.12.8"
   }
 }
