--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^20.5.8",
     "browserslist": "^4.21.9",
     "canvas": "^2.11.2",
+    "cross-env": "^7.0.3",
     "dayjs": "^1.11.9",
     "esbuild": "^0.18.17",
     "html-minifier-terser": "^7.2.0",
@@ -26,7 +27,6 @@
     "jest-environment-jsdom": "^29.6.4",
     "jsdom": "^22.1.0",
     "lightningcss": "^1.21.5",
-    "linkedom": "^0.15.1",
     "ts-jest": "^29.1.1",
     "tsx": "^3.12.8"
   }
