--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "@types/jsdom": "^21.1.2",
     "@types/node": "^20.5.8",
     "browserslist": "^4.21.9",
-    "canvas": "^2.11.2",
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.9",
     "esbuild": "^0.18.17",
     "html-minifier-terser": "^7.2.0",
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4",
+    "jest-webgl-canvas-mock": "^2.5.0",
     "jsdom": "^22.1.0",
     "lightningcss": "^1.21.5",
     "ts-jest": "^29.1.1",
