--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.9",
     "esbuild": "^0.18.17",
+    "esbuild-plugin-glsl": "^1.2.1",
     "html-minifier-terser": "^7.2.0",
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4",
