--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/jest": "^29.5.4",
     "@types/jsdom": "^21.1.2",
     "@types/node": "^20.5.8",
+    "@webgpu/types": "^0.1.34",
     "browserslist": "^4.21.9",
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.9",
