--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^20.5.8",
     "@webgpu/types": "^0.1.34",
     "browserslist": "^4.21.9",
+    "canvas": "^2.11.2",
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.9",
     "esbuild": "^0.18.17",
