--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "boulders",
   "version": "1.0.0",
   "main": "eleventy.config.js",
+  "engines": {
+    "node": ">=20.3.1"
+  },
   "scripts": {
     "start": "npm run dev -s",
     "dev": "eleventy --serve",
