feat: implement basic game menu

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,11 +9,11 @@
 
     "target": "es2019",
     "lib": ["DOM", "DOM.Iterable", "ES2019"],
-    // "jsx": "preserve",
+    "jsx": "react",
     // "experimentalDecorators": true,
     // "emitDecoratorMetadata": true,
-    // "jsxFactory": "",
-    // "jsxFragmentFactory": "",
+    "jsxFactory": "h",
+    "jsxFragmentFactory": "fragment",
     // "jsxImportSource": "",
     // "reactNamespace": "",
     // "noLib": true,
