--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dayjs": "^1.11.10",
     "esbuild": "^0.19.5",
     "esbuild-plugin-glsl": "^1.2.2",
+    "front-matter": "^4.0.2",
     "html-minifier-terser": "^7.2.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
@@ -34,6 +35,7 @@
     "jsdom": "^22.1.0",
     "lightningcss": "^1.22.1",
     "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "tsx": "^4.1.2"
   }
 }
